lab1/Test/L1-A-2-55.cmm
int M7AyRv6M 
;
struct {
  int tYB [ 1815970494 ] , Tcue8Yw ;
}AlbLhu2OmecFjI ( float MpKsmo3hlN8EsC , int ) {
  ! a = yT5KgWNK61D3iMhUR ;
}
int C , [ 1646847463 ] , Gv5_M5DWsP6f0 


;
